# anime-tv-series-recommender-system

./: .gitignore  pyproject.toml
notebook/: explore.ipynb  recommender.ipynb
src/: logger.py
src/utils/: logger.py  text_cleaning.py
